--- a/H2-StaticMembersAndNamespaces/P2_DistanceCalculator/P2_DistanceCalculator.csproj
+++ b/H2-StaticMembersAndNamespaces/P2_DistanceCalculator/P2_DistanceCalculator.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\P1_Point3D\P1_Point3D.csproj">
+      <Project>{72b8d13f-5943-4b49-a64d-2b67cd0c2cd2}</Project>
+      <Name>P1_Point3D</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
