--- a/H4-InheritanceAndAbstraction/P1_HumanStudentWorker/P1_HumanStudentWorker.csproj
+++ b/H4-InheritanceAndAbstraction/P1_HumanStudentWorker/P1_HumanStudentWorker.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Human.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
