--- a/H4-InheritanceAndAbstraction/P2_Animals/P2_Animals.csproj
+++ b/H4-InheritanceAndAbstraction/P2_Animals/P2_Animals.csproj
@@ -41,8 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Frog.cs" />
+    <Compile Include="ISoundProducible.cs" />
+    <Compile Include="Kitten.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tomcat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
