--- a/H4-InheritanceAndAbstraction/P3_CompanyHierarchy/P3_CompanyHierarchy.csproj
+++ b/H4-InheritanceAndAbstraction/P3_CompanyHierarchy/P3_CompanyHierarchy.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employee.cs" />
+    <Compile Include="Manager.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="RegularEmployee.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
