--- a/H6-OtherTypesInOOP/P3_GenericList/P3_P4_GenericList_Version.csproj
+++ b/H6-OtherTypesInOOP/P3_GenericList/P3_P4_GenericList_Version.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GenericList.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Version.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
