--- a/H7-DelegatesAndEvents/P1_CustomLINQExtensionMethods/P1_CustomLINQExtensionMethods.csproj
+++ b/H7-DelegatesAndEvents/P1_CustomLINQExtensionMethods/P1_CustomLINQExtensionMethods.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
