--- a/H7-DelegatesAndEvents/P3_AsynchronousTimer/P3_AsynchronousTimer.csproj
+++ b/H7-DelegatesAndEvents/P3_AsynchronousTimer/P3_AsynchronousTimer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncTimer.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
